# 1D-FW-CADIS-Neutron-Transport

./: .clang-format  .gitignore  CMakeLists.txt  README.md  readme.md  test_MCSlab.sh
MCSlab/: CMakeLists.txt
MCSlab/examples/: 1_region.xml  2_region_connected.xml  2_region_split.xml  run_examples.sh  submission_simulation.xml
MCSlab/include/: MCSlab.h  Neutron.h  Point.h  RNG.h  Region.h  Slab.h  fbrown_random.h  mcnp_random.h
MCSlab/scripts/: plot_collision.py  plot_pathlengths.py  plot_simulation.py
MCSlab/src/: MCSlab.cpp  Neutron.cpp  RNG.cpp  Region.cpp  Slab.cpp  fbrown_random.cpp  main.cpp
MCSlab/tests/: neutron_test.cpp  region_test.cpp  simulation_test.cpp
MCSlab/tests/input_files/: test_2_region_split.xml  test_pure_absorb.xml  test_pure_scatter.xml
code/include/: MCSlab.h
examples/: 2_region_connected.xml  2_region_split.xml  run_examples.sh
examples/fw-cadis/: 1_region.xml  SN_output  challenge_prob.xml  submission_simulation.xml
include/: Cell.h  CellBase.h  CellQuadrature.h  FW-CADIS.h  MCSlab.h  Neutron.h  Point.h  Quadrature.h  RNG.h  Region.h  SN.h  SNCell.h  XMLUtils.h  tinyxml2.h  utils.h
presentation/: Pohlmann-NPRE555-CP3.odp
report/: CP1.bib  CP3.bib  Makefile  hw_report.cls  pohlmann-report.tex
report/figs/: MC-flowchart.drawio  test_prob_figure.odg
report/output/: challenge_out.txt  sub_out.txt
scripts/: GL_table_maker.py  plot_collision.py  plot_outfile.py  plot_pathlength.py  plot_sn.py  run_and_time.sh
src/: Cell.cpp  CellBase.cpp  CellQuadrature.cpp  FW-CADIS.cpp  MCSlab.cpp  Neutron.cpp  RNG.cpp  Region.cpp  SN.cpp  SNCell.cpp  main.cpp  tinyxml2.cpp  utils.cpp
tests/: neutron_test.cpp  region_test.cpp  simulation_test.cpp
tests/input_files/: test_1_region.xml  test_2_region.xml
